Primeros pasos: index-style

--- a/index.html
+++ b/index.html
@@ -10,22 +10,29 @@
 </head>
 <body>
     <header>
-        <img src="logo-alura.png" alt="Logo Alura" id="logo-alura">
+        <img src="images/logo-alura.png" alt="Logo Alura" id="logo-alura">
     </header>
     <main>
-        <section>
-            <div>
+        <section class="bloque-izquierdo">
                 <textarea id="ingreso-texto" placeholder="Ingrese su texto para encriptar o desencriptar"></textarea>
-                <button></button>
-                <button></button>
+                <button class="encriptar">Encriptar</button>
+                <button class="desencriptar">Desencriptar</button>
+        </section>
+        <section class="bloque-derecho">
+            <div id="imagen-sin-texto">
+                <img src="images/no-texto.jpg" alt="Imagen no ingreso ningun mensaje" id="no-texto">
+            </div>
+            <div id="div-h3">
+                <h3>No se ingreso ningun mensaje</h3>
+            </div>
+            <div id="div-p">
+                <p>Ingrese el texto a procesar</p>
             </div>
         </section>
-        <section>
-            <textarea id="">
-
-            </textarea>
-        </section>
     </main>
+    <footer>
+
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
