Inicio de parte logica (falta responsive)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <p class="blanco">Escribir unicamente en minúscula y sin acentos</p>
                 </div>
                 <div class="div-botones">
-                    <input type="button" class="boton" value="Encriptar">
-                    <input type="button" class="boton" value="Desencriptar">
+                    <input type="button" class="boton-encriptar" value="Encriptar">
+                    <input type="button" class="boton-desencriptar" value="Desencriptar">
                 </div>
         </section>
         <section class="bloque-derecho">
@@ -29,15 +29,23 @@
                 <img src="images/no-texto.png" alt="Imagen no ingreso ningun mensaje" id="no-texto">
             </div>
             <div id="div-h3">
-                <h3 class="blanco">No se ingreso ningun mensaje</h3>
+                <h3 class="texto-derecho">No se ingreso ningun mensaje</h3>
             </div>
             <div id="div-p">
-                <p class="blanco">Ingrese el texto a procesar</p>
+                <p class="texto-derecho">Ingrese el texto a procesar</p>
+            </div>
+
+            <div id="respuesta">
+                <p>lo
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit dicta delectus aperiam praesentium recusandae exercitationem consequuntur, rem quidem neque itaque nam, sapiente eligendi eaque quo possimus minus repellendus at sed.</p>
+            </div>
+            <div id="div-copiar">
+                <input type="button" id="boton-copiar" value="Copiar">
             </div>
         </section>
     </main>
     <footer>
-
+        <p>Encriptador Challenge Alura LATAM  -  By Facundo Diaz</p>
     </footer>
     <script src="script.js"></script>
 </body>
