HTML CSS y JS completados

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
             </div>
 
             <div id="respuesta">
-                <p>lo
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit dicta delectus aperiam praesentium recusandae exercitationem consequuntur, rem quidem neque itaque nam, sapiente eligendi eaque quo possimus minus repellendus at sed.</p>
+                <p class="respuesta-encriptada"></p>
             </div>
             <div id="div-copiar">
-                <input type="button" id="boton-copiar" value="Copiar">
+                <input type="button" class="boton-copiar" value="Copiar">
             </div>
         </section>
     </main>
